# mcp-ui-servers

./: .gitignore  CLAUDE.md  Dockerfile  README.md  README_shared_websocket.md  app.py  chainlit.md  pyproject.toml  requirements.txt  run_chainlit.sh  shared_websocket.py  start_local.sh  start_servers.sh  unified_sse_server.py
.idx/: dev.nix
bak/: unified_server.py
mcp-button-state/: .dockerignore  Dockerfile  README.md  app.py  button_state_server.py  config.json  pyproject.toml  requirements.txt  server.py  sse_button_state_server.py  sse_server.py  test_integration.py  test_mcp.py  ui_app.py
mcp-button-state/.chainlit/: config.toml
mcp-button-state/mcp_button_state.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mcp-button-state/static/: index.html  test_websocket.html
mcp-company-selector/: company_selector_server.py  pyproject.toml  sse_company_selector_server.py  ui_app.py
mcp-company-selector/static/: index.html
mcp-company-to-company/: company_to_company.html  company_to_company_server.py  pyproject.toml  sse_company_to_company_server.py  ui_app.py
mcp-company-to-company/static/: index.html
mcp-strudel/: .dockerignore  CLAUDE.md  Dockerfile  README.md  app.py  cloudbuild.yaml  config.json  convert_mdx_to_md.py  create_llm_docs.py  deploy-gcloud.sh  deploy_heroku.sh  parse_drum_machines.py  parse_samples.py  parse_synths_drums.py  process_reference.py  pyproject.toml  requirements.txt  run_chainlit.sh  sse_server.py  sse_strudel_server.py  strudel_server.py
mcp-strudel/.chainlit/: config.toml
mcp-strudel/docs/: pyproject.toml
mcp-strudel/docs_processed/: README.md  code-samples.md  drum-machines-reference.md  drum-machines.txt  function-index.md  functions-reference-clean.md  gm-instruments-reference.md  instrument-samples.md  metadata.json  reference.md  synths-reference.md  synths.txt
mcp-strudel/docs_processed/functions/: intro.md  value-modifiers.md
mcp-strudel/docs_processed/intro/: showcase.md
mcp-strudel/docs_processed/learn/: accumulation.md  code.md  conditional-modifiers.md  csound.md  devicemotion.md  effects.md  factories.md  getting-started.md  hydra.md  input-devices.md  input-output.md  metadata.md  mini-notation.md  notes.md  pwa.md  random-modifiers.md  samples.md  signals.md  sounds.md  stepwise.md  strudel-vs-tidal.md  synths.md  time-modifiers.md  tonal.md  visual-feedback.md
mcp-strudel/docs_processed/recipes/: arpeggios.md  microrhythms.md  recipes.md  rhythms.md
mcp-strudel/docs_processed/technical-manual/: about.md  alignment.md  docs.md  internals.md  packages.md  patterns.md  project-start.md  repl.md  sounds.md  testing.md
mcp-strudel/docs_processed/understand/: cycles.md  pitch.md  voicings.md
mcp-strudel/docs_processed/workshop/: first-effects.md  first-notes.md  first-sounds.md  getting-started.md  pattern-effects.md  recap.md
mcp-strudel/llm_docs/: mcp_integration.py  strudel_complete_docs.md  strudel_docs_index.json  strudel_docs_system.py  strudel_docs_system_v2.py
mcp-strudel/mcp_greet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mcp-strudel/mcp_strudel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcp-strudel/static/: app.js  index-new.html  index.html  simple.html  styles.css  working-repl.html  working-repl.html.save  working-repl.js
mcp-strudel/static/examples/: button-controlled.html  codemirror-buildless.html  final-button-control.html  headless-buildless.html  index.html  keystroke-test.html  minimal-repl-buildless.html  simple-button.html  working-button-control.html
mcp-strudel/user_settings/: 5efe755ed554801f.json  6f63f57734c74052.json
user_settings/: 5efe755ed554801f.json
