[project]
name = "mcp-company-selector"
version = "0.1.0"
description = "MCP server with dual company selection using Valtio state management and WebSocket"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn",
    "fastmcp",
    "fastapi",
    "websockets"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["company_selector_server", "sse_company_selector_server"]