[project]
name = "mcp-strudel"
version = "0.1.0"
description = "This is a simple strudel MCP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit-mcp-client @ git+https://github.com/calvinw/chainlit-mcp-client",
    "fastmcp",
    "fastapi",
    "uvicorn"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "sse_server"]

[tool.uv.workspace]
members = [
    "docs",
]
